<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FC000000"
    tools:context=".Randomaizer">

    <TextView
        android:id="@+id/randomaizer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Randomaizer"
        android:textSize="45dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textViewRandomaizer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Number"
        android:textSize="34dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomaizer"
        app:layout_constraintVertical_bias="0.215" />

    <Button
        android:id="@+id/buttonToGenerate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Generate"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRandomaizer"
        app:layout_constraintVertical_bias="0.382" />

    <EditText
        android:id="@+id/editTextMinRange"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:inputType="number"
        android:hint="@string/hintMinRange"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonToGenerate" />

    <EditText
        android:id="@+id/editTextMaxRange"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:inputType="number"
        android:hint="@string/hintMaxRange"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toEndOf="@+id/editTextMinRange"
        app:layout_constraintTop_toBottomOf="@+id/buttonToGenerate" />


</androidx.constraintlayout.widget.ConstraintLayout>